// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell renders amount with provided field 1`] = `
<td
  className="Cell-cellAmount-5"
  title="super (demo code)  2016Q3 15564.524"
>
  15,564.52
</td>
`;

exports[`Cell renders percentage with provided field 1`] = `
<td
  className="Cell-cellQuantity-4"
  title="super (demo code)  2016Q3 15564.524"
>
  <b>
    15564.52
  </b>
</td>
`;

exports[`Cell renders text from nested field with link 1`] = `
<td
  className="Cell-cellText-2"
  title=""
>
  <a
    className="Cell-customLink-6"
    href="https://google.com"
  >
    <b>
      super
    </b>
  </a>
</td>
`;

exports[`Cell renders text with self field 1`] = `
<td
  className="Cell-cellText-2"
  title=""
>
  demo text
</td>
`;
